# static-program-analyzer

./: .clang-format  .gitignore  README.md  autoautotester.py
Team03/Code03/src/unit_testing/: CMakeLists.txt
Team03/Code03/src/unit_testing/src/: TestAST.cpp  helper.hpp
Team03/Code03/src/unit_testing/src/spa/common/: test_lexer.cpp  test_t_node.cpp  test_token.cpp
Team03/Code03/src/unit_testing/src/spa/common/clause/: test_boolean_select.cpp  test_synonym_select.cpp
Team03/Code03/src/unit_testing/src/spa/common/entity/: test_assign_entity.cpp
Team03/Code03/src/unit_testing/src/spa/pkb/entity_store/: test_constant_storage.cpp  test_procedure_storage.cpp  test_statement_storage.cpp  test_variable_storage.cpp
Team03/Code03/src/unit_testing/src/spa/pkb/pattern_store/: test_assign_pattern_storage.cpp  test_query_pattern_processor.cpp
Team03/Code03/src/unit_testing/src/spa/pkb/relationship_store/: test_calls_storage.cpp  test_follows_storage.cpp  test_parent_storage.cpp  test_relationship_manager.cpp
Team03/Code03/src/unit_testing/src/spa/qps/: test_evaluator.cpp  test_planner.cpp  test_qps_parser.cpp  test_query_operation_checker.cpp  test_query_string.cpp  test_query_string_builder.cpp
Team03/Code03/src/unit_testing/src/spa/qps/parser/: test_qps_boolean_select.cpp  test_qps_parser_affects.cpp  test_qps_parser_and.cpp  test_qps_parser_calls.cpp  test_qps_parser_follows.cpp  test_qps_parser_modifies.cpp  test_qps_parser_next.cpp  test_qps_parser_parent.cpp  test_qps_parser_pattern.cpp  (+3 more)
Team03/Code03/src/unit_testing/src/spa/sp/: test_simple_parser.cpp
(+762 files in other folders)
